tooling/nargo_cli/tests/snapshots/execution_success/dont_deduplicate_call/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, active: bool) {
    let mut x1: bool = false;
    // Safety: comment added by `nargo expand`
    unsafe {
        if active { x1 = foo(x); };
        let x2: bool = foo(x);
        assert(x2);
    }
}

unconstrained fn foo(_x: Field) -> bool {
    true
}
